# war

./: .gitignore  CMakeLists.txt  dependencies.txt  main.cpp  sender.cpp
qml/: Button.qml  Client.qml  TcpServer.qml  client.qml  main.qml  tcpServer.qml
src/: ChatContainer.cpp  ChatContainer.hpp  Client.cpp  Client.hpp  NetworkManager.cpp  NetworkManager.hpp  Receiver.cpp  Receiver.hpp  Sender.cpp  Sender.hpp  TcpServer.cpp  TcpServer.hpp
